[package]
name = "multi_hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_sha1 = "0.1.*"
rs_sha224 = "0.1.*"
rs_sha256 = "0.1.*"
rs_sha384 = "0.1.*"
rs_sha512 = "0.1.*"
rs_sha512_224 = "0.1.*"
rs_sha512_256 = "0.1.*"
